--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,6 +47,8 @@ dependencies = [
     # Additional utilities
     "python-dotenv>=1.0.0",
     "click>=8.1.0",
+    "netcdf4>=1.7.2",
+    "pydap>=3.5.6",
 ]
 
 [project.optional-dependencies]
