--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,6 +49,8 @@ dependencies = [
     "click>=8.1.0",
     "netcdf4>=1.7.2",
     "pydap>=3.5.6",
+    "pystac>=1.13.0",
+    "duckdb>=1.4.2",
 ]
 
 [project.optional-dependencies]
