--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,6 +51,7 @@ dependencies = [
     "pydap>=3.5.6",
     "pystac>=1.13.0",
     "duckdb>=1.4.2",
+    "python-pptx>=1.0.2",
 ]
 
 [project.optional-dependencies]
